# epid-verification-service

./: .gitignore  Jenkinsfile  NOTICE  README.md  download-cryptomaterials.sh  enable_rhel_support.sh  epidVerificationService.sh  pom.xml
.github/workflows/: build-docker-compose.yaml  main.yaml  scorecard.yml
NOTICES/: JACKSON-CORE-NOTICE  JAXB-API-NOTICE  JJWT-NOTICE  LEGION-OF-BOUNCY-CASTLE-NOTICE  LOGSTASH-NOTICE  LOMBOK-NOTICE  SPRING-BOOT-NOTICE  SPRING-FRAMEWORK-NOTICE
Native/: .clang-format  .gitignore  build.sh  dependency_resolver.txt
Native/src/service/: CMakeLists.txt
Native/src/service/epid_verifier/: CMakeLists.txt  dependencies.txt
Native/src/service/epid_verifier/c/: epid_verifier.c  epid_verifier_1_1.c  verifier_utils.c
Native/src/service/epid_verifier/headers/: epid_verifier.h  epid_verifier_1_1.h  get_verifier_version.h.in  verifier_utils.h
Native/src/service/epid_verifier_test/: CMakeLists.txt  dependencies.txt
Native/src/service/epid_verifier_test/cpp/: epid_sdk_mocks.cpp  epid_verifier_1_1_test.cpp  epid_verifier_test.cpp
Native/src/service/epid_verifier_test/headers/: epid_sdk_mocks.h  epid_verifier_1_1_test.h  epid_verifier_test.h  external_mocks.h
Native/src/service/epid_verifier_wrap/: CMakeLists.txt  epid_verifier.i
Native/tools/: coverage.sh
build_service/: Dockerfile  build.sh  docker-compose.yml
certs/: ca.cert.pem  ca.key.pem  verification-service-keystore.p12
demo/: Dockerfile-epid-verification  Podmanfile-epid-verification  README.md  cmdDocker.sh  docker-compose.yml  epid-verification.env
src/main/java/org/fidoalliance/fdo/epid/verification/: UVerificationServiceApplication.java
src/main/java/org/fidoalliance/fdo/epid/verification/conf/: CustomJettyContainerConfiguration.java  DevStaticResourcesConf.java  InfoConfig.java  ProdStaticResourcesConf.java  VerificationAppConfig.java
src/main/java/org/fidoalliance/fdo/epid/verification/conf/logging/: LoggingBeans.java  LoggingConfiguration.java  LogstashConfig.java
src/main/java/org/fidoalliance/fdo/epid/verification/controllers/: CryptoMaterialController.java  HealthController.java  ProofController.java
src/main/java/org/fidoalliance/fdo/epid/verification/controllers/v2/: ResourcesController.java
src/main/java/org/fidoalliance/fdo/epid/verification/enums/: EpidResource.java  EpidVersion.java
src/main/java/org/fidoalliance/fdo/epid/verification/exceptions/: EpidServicesException.java  GenericVerificationException.java  InvalidEpidGroupIdException.java  InvalidEpidGroupLengthException.java  InvalidEpidResourceTypeException.java  InvalidEpidResourceVersionException.java  InvalidSignatureException.java  ResourceAccessRestrictedException.java  ServiceDataSerializationException.java  SigrlVersionSignatureVersionMismatchException.java
src/main/java/org/fidoalliance/fdo/epid/verification/http/: RequestInitializerInterceptor.java
src/main/java/org/fidoalliance/fdo/epid/verification/logging/: IpConverter.java  IpManager.java  LogGetResourceInput.java  LogMethodInputAspect.java  MethodCallLogged.java  MethodCallLoggingAspect.java  MethodExecutionLogged.java  TransactionConverter.java  TransactionManager.java
src/main/java/org/fidoalliance/fdo/epid/verification/model/: RawSerializable.java
src/main/java/org/fidoalliance/fdo/epid/verification/utils/: ArrayByteBuilder.java  ByteBufferInputStream.java  ByteConversionUtils.java  RandomBytesUtils.java
src/main/resources/: application.properties  banner.txt  logback.xml
src/test/java/org/fidoalliance/fdo/epid/verification/logging/: IpConverterTest.java  IpManagerTest.java  TransactionConverterTest.java  TransactionManagerTest.java
src/test/java/org/fidoalliance/fdo/epid/verification/utils/: ArrayByteBuilderTest.java  ByteBufferInputStreamTest.java  ByteConversionUtilsTest.java  EpidStaticResourceLoaderTest.java  RandomBytesUtilsTest.java
src/test/resources/: testng.xml
(+28 files in other folders)
